--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 <html>
 <head>
 	<title>cv</title>
+	<style type="text/css">
+		body{
+			background-color: #dcd6f7;
+		}
+		hr{
+    width: 25%;
+    border-color: gray;
+    border-style: none;
+    border-top-style:dotted;
+    border-width: 5px;
+		}
+	</style>
 </head>
 <body>
 	<table cellspacing="20px;">
