--- a/index.html
+++ b/index.html
@@ -2,24 +2,13 @@
 <html>
 <head>
 	<title>cv</title>
-	<style type="text/css">
-		body{
-			background-color: #dcd6f7;
-		}
-		hr{
-    width: 25%;
-    border-color: gray;
-    border-style: none;
-    border-top-style:dotted;
-    border-width: 5px;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
 	<table cellspacing="20px;">
 		<tr>
 			<td>
-		<img  style="border-radius: 50%; width: 202px" src="images/vamsi.jpg" alt="missing image">	
+		<img  style="border-radius: 50%; width: 202px" src="./imag/imag2/images/vamsi.jpg" alt="missing image">	
 			</td>
 			<td>
 <h1>vamsi krishna</h1>
@@ -30,8 +19,9 @@
 		</tr>
 	</table>
 	<hr>
-	<ul><h3>village name</h3>
-		<li>native mangamur</li>
+	<ul id="v">
+		<h3>village name</h3>
+		<li><a href="https://www.learningcrux.com/course/the-complete-2020-web-development-bootcamp" >native mangamur</a></li>
 		<li>staying in hyd</li>
 	</ul>
 	<hr>
@@ -60,7 +50,11 @@
 	</table>
 	<hr>
 	<h2>skills</h2>
-	<table cellspacing="20px">
+     <!-- Nested table -->
+	<table cellpadding="20px">
+		<tr>
+			<td>
+				<table>
 		<tr>
 			<td>
 				Html
@@ -93,6 +87,45 @@
 					*****
 				</td>
 			</tr>
+	</table>
+			</td>
+		<td>
+				<table>
+		<tr>
+			<td>
+				Nodejs
+			</td>
+			<td>
+				****
+			</td>
+			<tr>
+			<tr>
+				<td>
+					java
+				</td>
+				<td>
+					***
+				</td>
+			</tr>
+<tr>
+				<td>
+					python
+				</td>
+				<td>
+					**
+				</td>
+			</tr>
+			<tr>
+				<td>
+					.Net
+				</td>
+				<td>
+					*
+				</td>
+			</tr>
+	</table>
+		</td>
+	</tr>
 	</table>
 <hr>
 <a href="hobies.html">My hobiles</a>
