--- a/index.html
+++ b/index.html
@@ -1,134 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>cv</title>
-	<link rel="stylesheet" type="text/css" href="./css/style.css">
+	<title></title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-	<table cellspacing="20px;">
-		<tr>
-			<td>
-		<img  style="border-radius: 50%; width: 202px" src="./imag/imag2/images/vamsi.jpg" alt="missing image">	
-			</td>
-			<td>
-<h1>vamsi krishna</h1>
-<i>Founcder of the webdevelopmwnt<a href="mydetail">click here</a></i>
-<br>
-<em>Be  com a softwareenginer</em>
-			</td>
-		</tr>
-	</table>
-	<hr>
-	<ul id="v">
-		<h3>village name</h3>
-		<li><a href="https://www.learningcrux.com/course/the-complete-2020-web-development-bootcamp" >native mangamur</a></li>
-		<li>staying in hyd</li>
-	</ul>
-	<hr>
-	<h3>work experiance</h3>
-	<table>
-		<thead>
-			<tr>
-			<th>Dates</th>
-			<th>work</th>
-		</tr>
-		</thead>
-		<tbody>
-	    <tr>
-		<td>2010-2012</td>
-		<td>wiprow</td>
-	    </tr>
-	     <tr>
-		<td>2012-2013</td>
-		<td>infosis<td>
-		</tr>
-		<tr>
-		<td>2013-2014</td>
-		<td>amezon</td>
-		</tr>
-		</tbody>
-	</table>
-	<hr>
-	<h2>skills</h2>
-     <!-- Nested table -->
-	<table cellpadding="20px">
-		<tr>
-			<td>
-				<table>
-		<tr>
-			<td>
-				Html
-			</td>
-			<td>
-				*****
-			</td>
-			<tr>
-			<tr>
-				<td>
-					javascript
-				</td>
-				<td>
-					*****
-				</td>
-			</tr>
-<tr>
-				<td>
-					css
-				</td>
-				<td>
-					*****
-				</td>
-			</tr>
-			<tr>
-				<td>
-					angular
-				</td>
-				<td>
-					*****
-				</td>
-			</tr>
-	</table>
-			</td>
-		<td>
-				<table>
-		<tr>
-			<td>
-				Nodejs
-			</td>
-			<td>
-				****
-			</td>
-			<tr>
-			<tr>
-				<td>
-					java
-				</td>
-				<td>
-					***
-				</td>
-			</tr>
-<tr>
-				<td>
-					python
-				</td>
-				<td>
-					**
-				</td>
-			</tr>
-			<tr>
-				<td>
-					.Net
-				</td>
-				<td>
-					*
-				</td>
-			</tr>
-	</table>
-		</td>
-	</tr>
-	</table>
-<hr>
-<a href="hobies.html">My hobiles</a>
-<a href="contact.html">Contact me</a>
+	
+	<section id="title">
+		<div class="container-fluid">
+<nav class="navbar navbar-expand-lg navbar-dark">
+  <a class="navbar-brand" href="#">tindog</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item ">
+        <a class="nav-link" href="#">contact <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">pricing</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Download</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+<div class="row">
+<div class="col-lg-6">
+<h1>Mett new and intresting dogs nearby.</h1>
+<button type="button" class="btn btn-dark"><i class="fab fa-apple"></i> Download</button>
+<button type="button" class="btn btn-outline-light"><i class="fab fa-google-play"></i> Download</button>
+</div>
+<div class="col-lg-6">
+<img src="images/tindog.png" class="tindog" alt="wrong way" id="dgimg">
+</div>
+</div>
+</div>
+</section>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 </body>
 </html>
